--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,4 @@
-appnope==0.1.0
+appnope
 argon2-cffi==20.1.0
 attrs==19.3.0
 backcall==0.2.0
@@ -71,3 +71,5 @@ zipp==3.1.0
 xlrd
 pandasql
 pyarrow
+sklearn
+pydotplus
