--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ jupyterlab==2.2.4
 jupyterlab-server==1.2.0
 kiwisolver==1.2.0
 locket==0.2.0
+lxml==4.5.2
 MarkupSafe==1.1.1
 matplotlib==3.3.0
 mistune==0.8.4
