--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 fsspec==0.8.0
+git+git://github.com/biolink/kgx
+git+git://github.com/OntoGene/OGER
 idna==2.10
 importlib-metadata==1.7.0
 ipykernel==5.3.4
