--- a/nlp/settings.ini
+++ b/nlp/settings.ini
@@ -4,18 +4,36 @@
 # e.g. Data root.
 # root = location of the working directory
 # accessed in other sections using => ${Shared:root}/
+
 [Main]
+
+# input formats accepted:
+# txt, txt_json, bioc_xml, bioc_json, conll, pubmed,
+# pxml, pxml.gz, pmc, nxml, pubtator, pubtator_fbk,
+# becalmabstracts, becalmpatents
+
 input-directory = input
 output-directory = output
 pointer-type = glob
 pointers = *.txt
-# iter-mode can be document or collection
-# document => 'n' input files = 'n' output files 
+
+# Two iter-modes available: [collection or document]
+# document:- 'n' input files = 'n' output files
 # (provided every file has ontology terms)
-# collection => n input files = 1 output file 
+# collection:- n input files = 1 output file
+
 iter-mode = collection
 article-format = txt
+
+# Export formats possible:
+# tsv, txt, text_tsv, xml, text_xml, bioc_xml,
+# bioc_json, bionlp, bionlp.ann, brat, brat.ann,
+# conll, pubtator, pubanno_json, pubtator, pubtator_fbk,
+# europepmc, europepmc.zip, odin, becalm_tsv, becalm_json
+# These can be passed as a list for multiple outputs too.
+
 export-format = tsv
+
 
 [Termlist]
 path =terms/envo_termlist.tsv
