--- a/nlp/settings.ini
+++ b/nlp/settings.ini
@@ -34,6 +34,9 @@ article-format = txt
 
 export-format = tsv
 
+# Multiple Termlists can be declared in separate sections
+# e.g. [Termlist1], [Termlist2] ...[Termlistn] with each having
+# their own paths
 
 [Termlist]
 path =terms/envo_termlist.tsv
