added robot files and updated nb
Added a new Envo and Envo+NCBITaxon notebook. Also updated the settings.ini file

--- a/nlp/settings.ini
+++ b/nlp/settings.ini
@@ -12,8 +12,8 @@
 # pxml, pxml.gz, pmc, nxml, pubtator, pubtator_fbk,
 # becalmabstracts, becalmpatents
 
-input-directory = input
-output-directory = output
+input-directory = output/alltext
+output-directory = nlpOutput
 pointer-type = glob
 pointers = *.txt
 
@@ -38,5 +38,11 @@ export-format = tsv
 # e.g. [Termlist1], [Termlist2] ...[Termlistn] with each having
 # their own paths
 
-[Termlist]
-path =terms/envo_termlist.tsv
+[Termlist1]
+path = terms/envo_termlist.tsv
+
+[Termlist2]
+path = terms/ncbitaxon_termlist.tsv
+
+[Termlist3]
+path = terms/chebi_termlist.tsv
