--- a/nlp/settings.ini
+++ b/nlp/settings.ini
@@ -46,3 +46,12 @@ path = terms/ncbitaxon_termlist.tsv
 
 [Termlist3]
 path = terms/chebi_termlist.tsv
+
+[Termlist4]
+path = terms/pato_termlist.tsv
+
+[Termlist5]
+path = terms/uo_termlist.tsv
+
+[Termlist6]
+path = terms/ro_termlist.tsv
