--- a/nlp/settings.ini
+++ b/nlp/settings.ini
@@ -12,10 +12,10 @@
 # pxml, pxml.gz, pmc, nxml, pubtator, pubtator_fbk,
 # becalmabstracts, becalmpatents
 
-input-directory = output/alltext
-output-directory = nlpOutput
+input-directory = data/nlp/input
+output-directory = data/nlp/output
 pointer-type = glob
-pointers = *.txt
+pointers = *.tsv
 
 # Two iter-modes available: [collection or document]
 # document:- 'n' input files = 'n' output files
@@ -23,7 +23,7 @@ pointers = *.txt
 # collection:- n input files = 1 output file
 
 iter-mode = collection
-article-format = txt
+article-format = txt_tsv
 
 # Export formats possible:
 # tsv, txt, text_tsv, xml, text_xml, bioc_xml,
@@ -38,20 +38,23 @@ export-format = tsv
 # e.g. [Termlist1], [Termlist2] ...[Termlistn] with each having
 # their own paths
 
-[Termlist1]
-path = terms/envo_termlist.tsv
+termlist_path = terms/envo_termlist.tsv
+termlist_stopwords = stopWords/stopwordsInput.txt
 
-[Termlist2]
-path = terms/ncbitaxon_termlist.tsv
+#[Termlist]
+#path = terms/envo_termlist.tsv
 
-[Termlist3]
-path = terms/chebi_termlist.tsv
+#[Termlist2]
+#path = terms/ncbitaxon_termlist.tsv
 
-[Termlist4]
-path = terms/pato_termlist.tsv
+#[Termlist3]
+#path = terms/chebi_termlist.tsv
 
-[Termlist5]
-path = terms/uo_termlist.tsv
+#[Termlist4]
+#path = terms/pato_termlist.tsv
 
-[Termlist6]
-path = terms/ro_termlist.tsv
+#[Termlist5]
+#path = terms/uo_termlist.tsv
+
+#[Termlist6]
+#path = terms/ro_termlist.tsv
