minor NER edits

--- a/nlp/settings.ini
+++ b/nlp/settings.ini
@@ -12,8 +12,8 @@
 # pxml, pxml.gz, pmc, nxml, pubtator, pubtator_fbk,
 # becalmabstracts, becalmpatents
 
-input-directory = ../../nlp/data/input
-output-directory = ../../nlp/data/output
+input-directory = data/nlp/input
+output-directory = data/nlp/output
 pointer-type = glob
 pointers = *.tsv
 
@@ -38,8 +38,8 @@ export-format = tsv
 # e.g. [Termlist1], [Termlist2] ...[Termlistn] with each having
 # their own paths
 
-termlist_path = ../../nlp/terms/envo_termlist.tsv
-termlist_stopwords = ../../nlp/stopWords/stopWordsInput.txt
+termlist_path = ../nlp/terms/envo_termlist.tsv
+termlist_stopwords = ../nlp/stopWords/stopWordsInput.txt
 include_header = True
 
 #[Termlist]
